Fix homepage youtube feature not showing on IE

--- a/sass/_youtube.scss
+++ b/sass/_youtube.scss
@@ -9,4 +9,5 @@
 .youtube_embed {
   width: 100%;
   height: 100%;
+  position: absolute;
 }
